# top-english-words

./: Cargo.toml  README.md  words.txt
src/: functions.rs  lib.rs  word_list.rs
