[package]
name = "top-english-words"
version = "1.1.1"
edition = "2021"
description = "Library to retrieve top words from the English language"
readme = "README.md"
repository = "https://github.com/hunterlawson/top-english-words"
license = "MIT OR Apache-2.0"
keywords = ["words", "popular", "frequent", "english"]
categories = ["text-processing"]

[dependencies]
include-lines = "1.1.2"
